--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,46 @@
-<div>
-  <label>Payee</label>
-  <input (input)="onNameChange($event.target.value)" />
-</div>
+<div class="container">
+  <h3>Agular Pipes Demo</h3>
 
-{{ name | titlecase }}
+  <div class="row">
+    <div class="form-group col">
+      <label>Name</label>
+      <input class="form-control" (input)="onNameChange($event.target.value)" />
+    </div>
+
+    <div class="col">
+      <label><b>Name</b></label>
+      <div>
+        {{ name | titlecase }}
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="form-group col">
+      <label>Date</label>
+      <input type="date" class="form-control" (input)="onDateChange($event.target.value)" />
+    </div>
+    
+    <div class="col">
+      <label><b>Date</b></label>
+      <div>
+        {{ date | date: 'MMMM d, y' }}
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="form-group col">
+      <label>Amount</label>
+      <input class="form-control" (input)="onAmountChange($event.target.value)" />
+    </div>
+    
+    <div class="col">
+      <label><b>Amount</b></label>
+      <div>
+        {{ amount | currency: 'INR' }}
+      </div>
+    </div>
+  </div>
+
+</div>
